# groundloc

./: Dockerfile  README.md
groundgrid/: CMakeLists.txt  package.xml
groundgrid/include/groundgrid/: GroundSegmentation.hpp
groundgrid/scripts/: eval_groundpoint_classifier.py
groundgrid/src/: GroundGrid.cpp  GroundGridNode.cpp  GroundSegmentation.cpp
groundloc/: CMakeLists.txt  package.xml
groundloc/include/: point_cloud.hpp
groundloc/launch/: CreateMap.launch.py  Localization.launch.py  Localization_SIFT.launch.py
groundloc/res/maps/HeLiPR/Aeva/: aeva_roundabout0102.tif  aeva_town0201.tif
groundloc/res/maps/HeLiPR/Avia/: avia_roundabout0102.tif  avia_town0201.tif
groundloc/res/maps/Kitti/: 00.tif  01.tif  02.tif  03.tif  04.tif  05.tif  06.tif  07.tif  08.tif  09.tif  10.tif
groundloc/res/models/: aeva_finetuned_sejong3_15eps.pt  avia_finetuned_sejong3_15eps.pt  kitti360_7eps.pt  ouster_finetuned_sejong3_15eps.pt
groundloc/res/poses/Kitti/00/: 00_poses_kitti.txt
groundloc/res/poses/Kitti/01/: 01_poses_kitti.txt
groundloc/res/poses/Kitti/02/: 02_poses_kitti.txt
groundloc/res/poses/Kitti/03/: 03_poses_kitti.txt
groundloc/res/poses/Kitti/04/: 04_poses_kitti.txt
groundloc/res/poses/Kitti/05/: 05_poses_kitti.txt
groundloc/res/poses/Kitti/06/: 06_poses_kitti.txt
groundloc/res/poses/Kitti/07/: 07_poses_kitti.txt
groundloc/res/poses/Kitti/08/: 08_poses_kitti.txt
groundloc/res/poses/Kitti/09/: 09_poses_kitti.txt
groundloc/res/poses/Kitti/10/: 10_poses_kitti.txt
groundloc/rviz/: groundloc.rviz
groundloc/scripts/: calculate_ate_are.py  collect_geotiff.py  merge_geotiffs.py
quatro/: CMakeLists.txt  package.xml
quatro/include/: conversion.hpp  fpfh_manager.hpp  imageProjection.hpp  quatro.hpp  quatro_node_cuda.hpp  quatro_node_sift.hpp  utility.h
quatro/msg/: CloudInfo.msg
quatro/nodes/: quatro_node_cuda.cpp  quatro_node_sift.cpp  run_global_registration.cpp
quatro/src/: graph.cc
