<?xml version="1.0"?>
<package format="3">
  <name>quatro</name>
  <version>0.0.1</version>
  <description>Robust global registration</description>

  <maintainer email="shapelim@kaist.ac.kr">Hyungtae Lim</maintainer>


	<buildtool_depend>ament_cmake</buildtool_depend>
	<buildtool_depend>ament_cmake_python</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>rclpy</depend>
	<depend>rclcpp</depend>
	<depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Creative Commons Attribution-NonCommercial-ShareAlike 4.0 License</license>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_msgs</depend>
	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
